# GHChecksum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
src/: CustomString.cpp  CustomString.h  GHChecksum_API.h  app.h  ghchecksum.cpp  ghchecksum.h  main.cpp
src/lib/: CustomString.cpp  CustomString.h  GHChecksum_API.h  gh_inttypes.h  ghchecksum.cpp  ghchecksum.h  inttypes.h
src/tests/: qbkey.cpp  roqtable.cpp
